WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39133
Clipboard.setData doesn't need to be custom
https://bugs.webkit.org/show_bug.cgi?id=39133
Summary
Clipboard.setData doesn't need to be custom
Adam Barth
Reported
2010-05-14 13:40:15 PDT
Clipboard.setData doesn't need to be custom
Attachments
Patch
(3.70 KB, patch)
2010-05-14 13:45 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.48 KB, patch)
2010-05-14 14:30 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2010-05-14 13:45:19 PDT
Created
attachment 56104
[details]
Patch
Darin Adler
Comment 2
2010-05-14 14:21:07 PDT
Comment on
attachment 56104
[details]
Patch
> + // FIXME: Should setData return void? It used be declared that way... > + // Also, this function used to be declared to throw an > + // exception even though it never did.
I don't think this comment is all that helpful.
Adam Barth
Comment 3
2010-05-14 14:30:50 PDT
Created
attachment 56109
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2010-05-15 06:15:01 PDT
Comment on
attachment 56109
[details]
Patch for landing Clearing flags on attachment: 56109 Committed
r59536
: <
http://trac.webkit.org/changeset/59536
>
WebKit Commit Bot
Comment 5
2010-05-15 06:15:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug